--- a/ipAddress-tracker/index.html
+++ b/ipAddress-tracker/index.html
@@ -4,8 +4,50 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IP Address Tracker</title>
-  </head>
-  <body>
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     
+  </head>
+
+
+  <body>
+
+  <header>
+<h1> IP Address Tracker</h1>
+<form class="search-form">
+    <input
+    type="text"
+    id="myInput"
+    class="search"
+    placeholder="IP address"
+   />
+   <button id="submit">
+
+   </button>
+
+  
+   
+
+
+
+</form>
+
+
+
+
+  </header>
+  <main>
+
+    <div id="showInformation">
+     
+    </div>
+
+  </main>
+
+  <script src="/ipAddress-tracker/index.js"></script>
   </body>
+
+
+
 </html>
