shoval gibly project

--- a/ipAddress-tracker/index.html
+++ b/ipAddress-tracker/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IP Address Tracker</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="index.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
     
@@ -26,15 +26,7 @@
 
    </button>
 
-  
-   
-
-
-
 </form>
-
-
-
 
   </header>
   <main>
@@ -45,7 +37,7 @@
 
   </main>
 
-  <script src="/ipAddress-tracker/index.js"></script>
+  <script src="index.js"></script>
   </body>
 
 
